# Os-DispatchImitation

./: CMakeLists.txt  README.md  main.cpp  《计算机操作系统》实验设计.md  基本构思.md
DispatchAction/: DispatchAction.cpp  DispatchAction.h  sleeping_barber.cpp  sleeping_barber.h
EnvImitator/Resource_Disk/: Disk.cpp  Disk.h
EnvImitator/Resource_Memory/: Memory.cpp  Memory.h
Exceptions/: Exception_BoundExceed.cpp  Exception_BoundExceed.h  Exception_NoSuchFrame.cpp  Exception_NoSuchFrame.h  Exception_Page_Missing.cpp  Exception_Page_Missing.h
Kernel/DispatchAction/: DispatchAction.cpp  DispatchAction.h
Kernel/Page/: Page.cpp  Page.h
Kernel/PageFrame/: PageFrame.cpp  PageFrame.h
Kernel/PageItem/: PageItem.cpp  PageItem.h
Kernel/PageLinkedList/: PageLinkedList.cpp  PageLinkedList.h
Kernel/PageList/: PageList.cpp  PageList.h
Process/: Process.cpp  Process.h
Threading_Pack/: Thread_Proc_Wrapper.cpp  Thread_Proc_Wrapper.h  banker.cpp  banker.h
